# claude-code-recall

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  _typos.toml  capabilities-memory.md  pyproject.toml  pyrightconfig.json  release-please-config.json  ruff.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: codecov.yml  zizmor.yml
.github/workflows/: lint.yml  pr-title.yml  release-please.yml  tests.yml
design/research/2026-06-25-chunk-level-embeddings/: research.md
design/research/2026-06-25-search-result-format/: research.md
design/specs/001-architecture-cleanup/: design.md  research.md
design/specs/001-architecture-cleanup/tasks/: .validation-report.md  T01-runtime-boundaries.md  T02-semantic-extra-search.md  T03-canonical-exchanges.md  T04-import-jobs.md  T05-remove-token-analytics.md  T06-docs-and-final-integration.md  context.md
design/specs/001-chunk-level-embeddings/: design.md  output-format-contract.md
design/specs/001-chunk-level-embeddings/tasks/: .validation-report.md  T01-chunk-schema-persistence.md  T02-version-bump-cap-locator.md  T03-incremental-chunk-write-path.md  T04-chunk-grain-backfill.md  T05-scored-fusion-output-renderers.md  T06-search-a-cards-and-teardown.md  T07-search-messages-entrypoint-b.md  T08-sync-concurrency-and-model-warm.md  T09-documentation.md  context.md
design/specs/001-search-result-format/: design.md
design/specs/001-token-subsystem-refactor/: design.md
design/specs/001-token-subsystem-refactor/tasks/: .validation-report.md  T01-golden-pins.md  T02-cost-helper.md  T03-token-output-split.md  T04-token-insights-split.md  T05-parse-session-split.md  context.md
design/specs/002-ccrecall-surfacing-model/: design.md
design/specs/002-ccrecall-surfacing-model/tasks/: .validation-report.md  T01-health-module.md  T02-embedding-status-recording.md  T03-sessionstart-integration.md  T04-reactive-recall-caveat.md  context.md
design/specs/002-cleanup-plan/: brief.md  design.md
design/specs/002-cleanup-plan/tasks/: .validation-report.md  T01-delete-token-analytics.md  T02-delete-onboarding-legacy.md  T03-create-config-module.md  T04-repoint-mixed-callers.md  T05-connection-mgmt-source.md  T06-connection-mgmt-tests.md  T07-branch-identity-source.md  T08-branch-identity-tests.md  T09-schema-versioning-migration.md  T10-search-decomposition.md  T11-per-process-logging-docs.md  context.md
design/specs/002-db-write-path-refactor/: design.md
design/specs/002-db-write-path-refactor/tasks/: .validation-report.md  T01-characterization-pins.md  T01-sync-session-pin.md  T02-pragma-relocate-migrate-db-split.md  T02-sync-session-split.md  T03-migrate-columns-split.md  T04-sync-session-split.md  context.md
design/specs/003-cleanup-round-two/: design.md
design/specs/003-cleanup-round-two/tasks/: .validation-report.md  T01-small-fixes.md  T02-v2-migration.md  T03-split-session-ops.md  T04-split-memory-context.md  T05-split-backfill.md  (+2 more)
design/specs/003-import-oom-fix/: design.md
design/specs/003-migrations-squash-v6-baseline/: design.md
design/specs/004-tool-content-indexing/: design.md
docs/: origin-brief.md
hooks/: hooks.json
scripts/embedding_eval/: .gitignore  README.md  recall_harness.py
skills/ccr-recall/: SKILL.md
skills/ccr-recall/references/: tool-reference.md
skills/ccr-resume/: SKILL.md
skills/ccr-tokens/: SKILL.md
skills/cm-get-token-insights/: SKILL.md
skills/cm-recall-conversations/: SKILL.md
skills/cm-recall-conversations/references/: lenses.md
skills/mine-resume/: SKILL.md
src/ccrecall/: __init__.py  branch_ops.py  config.py  content.py  db.py  embed_ops.py  embeddings.py  errors.py  formatting.py  fusion.py  health.py  import_log_ops.py  legacy.py  message_ops.py  migrations.py  models.py  parsing.py  project_ops.py  recent_chats.py  schema.py  search_cli.py  search_conversations.py  search_hydrate.py  search_query.py  search_vector.py  serialization.py  session_ops.py  session_tail.py  summarizer.py  token_analytics.py  token_dashboard.py  token_insights.py  token_output.py  token_parser.py  token_schema.py
src/ccrecall/cli/: __init__.py  commands.py  context.py
src/ccrecall/hooks/: backfill_embeddings.py  backfill_query.py  backfill_status.py  backfill_summaries.py  backfill_tool_content.py  clear_handoff.py  context_alerts.py  context_rendering.py  import_conversations.py  memory_context.py  memory_setup.py  memory_sync.py  onboarding.py  session_selection.py  sync_current.py  tool_content_eligibility.py  warm_model.py  write_config.py
src/ccrecall/templates/: dashboard.html
src/claude_memory/: __init__.py  content.py  db.py  ingest_token_data.py  parsing.py  project_ops.py  recent_chats.py  search_conversations.py  session_ops.py  session_tail.py  summarizer.py  token_analytics.py  token_dashboard.py  token_insights.py  token_output.py  token_parser.py  token_schema.py
src/claude_memory/hooks/: backfill_embeddings.py  backfill_summaries.py  clear_handoff.py  consolidation_check.py  import_conversations.py  memory_context.py  memory_setup.py  memory_sync.py  onboarding.py  sync_current.py  write_config.py
tests/: conftest.py  test_backfill_embeddings.py  test_backfill_tool_content.py  test_boundary_validation.py  test_clear_handoff_contract.py  test_cli_context.py  test_cli_errors.py  test_consolidation.py  test_content.py  test_context_alerts.py  test_context_injection.py  test_db.py  test_embeddings.py  test_formatting.py  test_fusion.py  test_health.py  test_import_pipeline.py  test_ingest_token_data.py  test_integration.py  test_legacy_migration.py  test_onboarding.py  test_parsing.py  test_project_ops.py  test_recent_chats.py  test_search.py  test_security.py  test_serialization.py  test_session_ops.py  test_session_tail.py  test_summarizer.py  test_sync_hook.py  test_token_insights.py  test_token_output.py  test_token_parser.py  test_write_config.py  token_helpers.py
tests/fixtures/: channel_telegram.jsonl  with_teammate_messages.jsonl
tools/: check_lazy_imports.py  check_llm_cruft.py  check_spec_tokens.py  lint_helpers.py
(+13 files in other folders)
