[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ccrecall"
version = "0.9.0"
description = "Conversation history and semantic search for Claude Code"
requires-python = ">=3.10"
# Pinned to the versions in uv.lock: `uv tool install -e` (how install.py
# installs this package) ignores uv.lock and resolves fresh, so an unbounded
# range would pull newer ABI/runtime-breaking releases of these native wheels.
# fastembed is the embedding engine — it owns the ONNX runtime + tokenizers and
# the model download, so onnxruntime is left to fastembed's own constraint (an
# explicit pin here fights its resolver) and reproducibility comes from uv.lock.
# numpy is a direct dependency and uses Python-version markers. To re-sync after
# a bump: `uv lock` then mirror the resolved versions here.
dependencies = [
    "sqlite-vec==0.1.9",
    "fastembed==0.8.0",
    "numpy==2.2.6; python_version < '3.11'",
    "numpy==2.4.6; python_version >= '3.11'",
    "whenever==0.10.0",
    # Pin pydantic exactly so its native (Rust) pydantic-core dep resolves to a
    # known ABI — same rationale as the native wheels above.
    "pydantic==2.13.4",
    "cyclopts>=4.16",
]

[project.scripts]
# Unified CLI — single entry point. Subcommands replace the former skill-facing
# and helper cm-* tools. The hook entry points below keep their cm-* names for
# now (folded into `ccrecall hook ...` in a later phase).
ccrecall                 = "ccrecall.cli:app"
# Hook entry points (wired in settings.json)
cm-memory-setup          = "ccrecall.hooks.memory_setup:main"
cm-memory-sync           = "ccrecall.hooks.memory_sync:main"
cm-memory-context        = "ccrecall.hooks.memory_context:main"
cm-onboarding            = "ccrecall.hooks.onboarding:main"
cm-clear-handoff         = "ccrecall.hooks.clear_handoff:main"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
