[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ccrecall"
version = "0.18.1"
description = "Conversation history and semantic search for Claude Code"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Jessica Smith", email = "12jessicasmith34@gmail.com" }]
keywords = [
    "claude-code",
    "conversation-history",
    "search",
    "recall",
    "transcripts",
    "semantic-search",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
# Pinned to the versions in uv.lock: `uv tool install` without a lockfile
# ignores uv.lock and resolves fresh, so an unbounded range would pull newer
# ABI/runtime-breaking releases of these native wheels.
# fastembed is the embedding engine — it owns the ONNX runtime + tokenizers and
# the model download, so onnxruntime is left to fastembed's own constraint (an
# explicit pin here fights its resolver) and reproducibility comes from uv.lock.
# numpy is a direct dependency and uses Python-version markers. To re-sync after
# a bump: `uv lock` then mirror the resolved versions here.
dependencies = [
    "sqlite-vec==0.1.9",
    "fastembed==0.8.0",
    "numpy==2.4.6",
    "whenever==0.10.0",
    # Pin pydantic exactly so its native (Rust) pydantic-core dep resolves to a
    # known ABI — same rationale as the native wheels above.
    "pydantic==2.13.4",
    "cyclopts>=4.16",
]

[project.urls]
Homepage = "https://github.com/NodeJSmith/claude-code-recall"
Issues = "https://github.com/NodeJSmith/claude-code-recall/issues"
Changelog = "https://github.com/NodeJSmith/claude-code-recall/blob/main/CHANGELOG.md"

[project.scripts]
# Unified CLI — single entry point. Subcommands replace the former skill-facing
# and helper cm-* tools.
ccrecall                 = "ccrecall.cli:main"
# Hook entry points (wired by the plugin's hooks/hooks.json). Kept as separate
# console scripts rather than `ccrecall hook ...` subcommands on purpose: hooks
# fire on every SessionStart/Stop, and routing through the full cyclopts app
# eager-imports the whole command surface (fastembed/numpy/onnxruntime, ~1800ms)
# vs ~440ms for a direct hook import. The no-lazy-imports rule rules out dodging
# that, so a direct entry point per hook stays the fast path.
ccrecall-setup           = "ccrecall.hooks.memory_setup:main"
ccrecall-sync            = "ccrecall.hooks.memory_sync:main"
ccrecall-context         = "ccrecall.hooks.memory_context:main"
ccrecall-clear-handoff   = "ccrecall.hooks.clear_handoff:main"
ccrecall-warm-model      = "ccrecall.hooks.warm_model:main"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.0",
    "pytest-cov>=7.0.0",
    "coverage[toml]>=7.10.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
constraint-dependencies = ["pillow>=12.3.0"]

[tool.coverage.run]
branch = true          # measure branch coverage, not just lines
source = ["ccrecall"]
parallel = true        # suffix data files so per-Python-version CI shards combine cleanly
relative_files = true  # stable paths across CI runners
omit = ["*/__init__.py", "*/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
# fail_under = 80  # enable once a baseline is established; CI can override
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"
